[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meok-agents-md-lint-mcp"
version = "1.0.2"
description = "MEOK AGENTS.md Linter MCP — validates the cross-vendor coding-agent spec (Cursor / Claude Code / Cline / Windsurf / Aider / OpenAI Codex) stewarded by AAIF. Security smells + consistency lint + passing templates. By MEOK AI Labs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nicholas Templeman", email = "nicholas@meok.ai" }]
keywords = ["mcp", "agents-md", "linter", "coding-agents", "cursor", "claude-code", "aaif", "meok"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["mcp[cli]>=1.3.0"]

[project.urls]
Homepage = "https://meok.ai/docs"
Repository = "https://github.com/CSOAI-ORG/meok-agents-md-lint-mcp"

[project.scripts]
meok-agents-md-lint-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]


[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_Configs = true
disallow_untyped_defs = true

